# home_infra

./: .gitignore  LICENSE  README.md  home_db.sqlite  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_28_1259-46548515cf48_.py  2024_02_01_1029-0572ca0c1155_.py
app/: bot.py  just_start.py  main.py  videodata.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  bot_user.py  face_recognitions.py  intercom.py  user.py
app/api_client/: local_api.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/crud/: __init__.py  base.py  bot_user.py  intercom.py
app/ertelecom/: endpoints_example.py  intercom.py  params.py
app/face_recognition/: __init__.py  face_recognition.py
app/face_recognition_local/: face_recognition.py
app/models/: __init__.py  bot_user.py  guest.py  intercom.py  somedata.py
app/schemas/: __init__.py  bot_user.py  face_recognition.py  intercom.py  user.py
app/telegram_bot/: callback_factory.py  local_api.py  middleware.py  start.py  states.py
